syntax = "proto3";

package opendut.types.topology;

import "opendut/types/util/uuid.proto";
import "opendut/types/util/net.proto";

message DeviceId {
  opendut.types.util.Uuid uuid = 1;
}

message DeviceDescriptor {
  opendut.types.topology.DeviceId id = 1;
  string name = 2;
  string description = 3;
  opendut.types.util.NetworkInterfaceName interface = 4;
  repeated string tags = 5;
}
